add links to each entry to show details
Co-Authored-By: Erich Richter <erich.richter@gmail.com>

--- a/PlacesYouHaveBeen/Views/Places/Index.cshtml
+++ b/PlacesYouHaveBeen/Views/Places/Index.cshtml
@@ -9,7 +9,7 @@
 <ul>
   @foreach (Place place in Model)
   {
-    <li>@place.PlaceName</li>
+    <li><a href ='/places/@place.Id'>@place.PlaceName</a></li>
   }
 </ul>
 
