--- a/PlacesYouHaveBeen/Views/Places/Index.cshtml
+++ b/PlacesYouHaveBeen/Views/Places/Index.cshtml
@@ -14,3 +14,7 @@
 </ul>
 
 <a href="/places/new">Add a new entry.</a>
+
+<form action="/places/delete" method="post">
+  <button type="submit" name="button">Clear All Places</button>
+</form>
